--- a/package.json
+++ b/package.json
@@ -1,43 +1,38 @@
 {
-  "name": "duck-loader",
+  "name": "foot.duckarchive.com",
   "private": true,
-  "version": "1.9.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && tsc -p tsconfig.scripts.json",
-    "minify:scripts": "find ./dist/scripts -type f -name \"*.js\" -exec uglifyjs {} -c -m --toplevel --output {} \\; -print",
-    "prebuild": "tsc --noEmit && tsc --noEmit -p tsconfig.scripts.json && node ./scripts/prebuild.js",
-    "postbuild": "node ./scripts/postbuild.js && npm run minify:scripts",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "chakra-react-select": "^4.8.0",
-    "framer-motion": "^11.2.6",
+    "@chakra-ui/react": "^2.10.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "chakra-react-select": "^4.10.1",
+    "framer-motion": "^11.13.1",
     "lodash": "^4.17.21",
-    "pdfjs-dist": "^4.3.136",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.5",
-    "react-icons": "^5.2.1",
-    "uglify-js": "^3.18.0",
-    "wouter": "^3.2.0"
+    "pdfjs-dist": "^4.9.155",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
+    "react-icons": "^5.4.0",
+    "wouter": "^3.3.5"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.268",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "@types/react": "^18.3.14",
+    "@types/react-dom": "^18.3.2",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11"
   }
 }
