--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "wouter": "^3.3.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
