--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      - name: Caching Gatsby ☘️
+      - name: Caching Vite ☘️
         id: vite-cache-build
         uses: actions/cache@v4
         with:
